<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#FFFFFFFF" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical" >
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:orientation="vertical" >

			<Button 
				android:id="@+id/create" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/create"
			/>

			<Button 
				android:id="@+id/pack" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/pack"
			/>

			<Button 
				android:id="@+id/copy" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/copy"
			/>

			<Button 
				android:id="@+id/paste" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/paste"
			/>

			<Button 
				android:id="@+id/rename" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/rename"
			/>

			<Button 
				android:id="@+id/delete" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/delete"
			/>

			<Button 
				android:id="@+id/exit" 
				android:layout_width="fill_parent"
				android:layout_height="match_parent"
				android:text="@string/exit"
			/>

		</LinearLayout>
	</LinearLayout>

</ScrollView>
